[package]
name = "mywinapiapp"
version = "0.1.0"
authors = ["Bob Hoeppner <32035397+bobahop@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3", features = ["winuser", "std", "libloaderapi", "errhandlingapi"] }
